# gimp-plugin-insanebump

./: ChangeLog  HACKING  Makefile  Makefile.in  README  config.h  config.status  configure  configure.ac  intltool-merge  intltool-update
autom4te.cache/: output.1  requests  traces.0  traces.1
help/: Makefile  Makefile.in
help/en/: Makefile  Makefile.in  index.html
help/images/: Makefile  Makefile.in
nbproject/: configurations.xml  project.xml
nbproject/private/: Default.properties  configurations.xml
po/: Makefile  Makefile.in  az.gmo  az.po  de.gmo  de.po  fr.gmo  fr.po  sk.gmo  sk.po  sv.gmo  sv.po  zh_TW.gmo  zh_TW.po
src/: InsaneBump.c  InsaneBump.h  InsaneBump.mk  InsaneBump.project  InsaneBump.tags  InsaneBump.txt  InsaneBump.workspace  InsaneBump.workspace.derby_russell  InsaneBump.workspace.session  InsaneBump_wsp.mk  Makefile  Makefile.am  Makefile.in  PluginConnectors.c  PluginConnectors.h  interface.c  interface.h  main.c  main.h  normalmap.c  preview_area.c  scale.c  scale.h
src/.deps/: InsaneBump.Po  PluginConnectors.Po  interface.Po  main.Po  normalmap.Po  preview_area.Po  scale.Po
src/objects/: cube.h  quad.h  sphere.h  teapot.h  torus.h
src/win32c/: InsaneBump3.py  MINGWFixGimp.txt  config.h
